feat(category): Implemented category route
