# src/db/schema/categories.ts
@@ -3,35 +3,41 @@ import { InferInsertModel, InferSelectModel, eq, sql } from "drizzle-orm";
 import db from "../../db";
 import { users } from "./users";
 
-export const catergories = pgTable("catergories", {
+export const categories = pgTable("categories", {
     categoryId: serial("category_id").primaryKey(),
     userId: uuid("user_id").references(() => users.userId),
     name: varchar("name").notNull(),
     color: varchar("color").notNull(),
 });
 
-export type Category = InferSelectModel<typeof catergories>;
-export type NewCategory = InferInsertModel<typeof catergories>;
+export type Category = InferSelectModel<typeof categories>;
+export type NewCategory = InferInsertModel<typeof categories>;
 
-const categoorySelectById = db
+export const STARTING_CATEGORIES: NewCategory[] = [
+    { name: "Shopping", color: "#2567F9" },
+    { name: "Health", color: "#2567F9" },
+    { name: "Food", color: "#FF3C82" },
+];
+
+const categorySelectById = db
     .select()
-    .from(catergories)
-    .where(eq(catergories.categoryId, sql.placeholder("id")))
+    .from(categories)
+    .where(eq(categories.categoryId, sql.placeholder("id")))
     .prepare("category_select_by_id");
 
 const categorySelectByUser = db
     .select()
-    .from(catergories)
-    .where(eq(catergories.userId, sql.placeholder("userId")))
+    .from(categories)
+    .where(eq(categories.userId, sql.placeholder("userId")))
     .prepare("category_select_by_user");
 
 const categoryDeleteById = db
-    .delete(catergories)
-    .where(eq(catergories.categoryId, sql.placeholder("id")))
+    .delete(categories)
+    .where(eq(categories.categoryId, sql.placeholder("id")))
     .prepare("category_delete_by_id");
 
 export const getCategoryById = async (id: number) =>
-    await categoorySelectById.execute({ id });
+    await categorySelectById.execute({ id });
 
 export const getUserCategories = async (userId: string) =>
     await categorySelectByUser.execute({ userId });
@@ -40,4 +46,11 @@ export const deleteCategory = async (id: number) =>
     await categoryDeleteById.execute({ id });
 
 export const insertCategory = async (newCategory: NewCategory) =>
-    db.insert(catergories).values(newCategory).returning();
+    db.insert(categories).values(newCategory).returning();
+
+export const updateCategory = async (newCategory: NewCategory, id: number) =>
+    db
+        .update(categories)
+        .set(newCategory)
+        .where(eq(categories.categoryId, sql.placeholder("id")))
+        .returning();
